# lossy-j2k-exr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/main/cpp/: ojphl.cpp  ojphl.h  ojphl_dec.cpp  ojphl_enc.cpp
